# cour

./: Cargo.toml  README.md
src/: config.rs  error.rs  ingest.rs  lib.rs  maildir.rs  main.rs  model.rs  parse.rs  send.rs  sync.rs  threading.rs  watch.rs
src/ai/: draft.rs  extract.rs  mod.rs  ollama.rs  openai.rs  traits.rs
src/commands/: approve.rs  ask.rs  brief.rs  doctor.rs  draft.rs  mod.rs  read.rs  reindex.rs  search.rs  send.rs  sync.rs  thread.rs
src/index/: mod.rs  query.rs  repo.rs  schema.rs  search.rs
src/ui/: app.rs  command_palette.rs  mod.rs  onboarding.rs  theme.rs
src/ui/views/: actions.rs  brief.rs  drafts.rs  inbox.rs  mod.rs  search.rs  thread.rs
