[package]
name = "cour"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cour"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled-full"] }
mail-parser = "0.11"
notify = "8"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
ratatui = "0.29"
crossterm = "0.28"
